# NyID

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: nyid.c  nyid.h
static/: NyID Piskel-20240906-213548.piskel
tests/: nyid_test.c
